logs/dag_id=weather_data/run_id=manual__2022-09-03T11:33:21.220402+00:00/task_id=insert_weather_krd/attempt=1.log
[2022-09-03T11:33:27.573+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: weather_data.insert_weather_krd manual__2022-09-03T11:33:21.220402+00:00 [queued]>
[2022-09-03T11:33:27.580+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: weather_data.insert_weather_krd manual__2022-09-03T11:33:21.220402+00:00 [queued]>
[2022-09-03T11:33:27.580+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2022-09-03T11:33:27.581+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2022-09-03T11:33:27.582+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2022-09-03T11:33:27.589+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): insert_weather_krd> on 2022-09-03 11:33:21.220402+00:00
[2022-09-03T11:33:27.593+0000] {standard_task_runner.py:52} INFO - Started process 10416 to run task
[2022-09-03T11:33:27.596+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'weather_data', 'insert_weather_krd', 'manual__2022-09-03T11:33:21.220402+00:00', '--job-id', '196', '--raw', '--subdir', 'DAGS_FOLDER/first_dag.py', '--cfg-path', '/tmp/tmpk_dh0fab', '--error-file', '/tmp/tmpy1kovbqt']
[2022-09-03T11:33:27.597+0000] {standard_task_runner.py:80} INFO - Job 196: Subtask insert_weather_krd
[2022-09-03T11:33:27.637+0000] {task_command.py:371} INFO - Running <TaskInstance: weather_data.insert_weather_krd manual__2022-09-03T11:33:21.220402+00:00 [running]> on host 3d56073112d8
[2022-09-03T11:33:27.717+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_data
AIRFLOW_CTX_TASK_ID=insert_weather_krd
AIRFLOW_CTX_EXECUTION_DATE=2022-09-03T11:33:21.220402+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-09-03T11:33:21.220402+00:00
[2022-09-03T11:33:27.724+0000] {base.py:68} INFO - Using connection ID 'postgres_default' for task execution.
[2022-09-03T11:33:27.727+0000] {sql.py:315} INFO - Running statement: insert into weather(
                name
                temp,
                temp_min,
                temp_max,
                description,
                wind_speed,
                sunset,
                sunrise
            ) values (
                'Краснодар',
                '33.33',
                '30.03',
                '33.33',
                'ясно',
                '3',
                '1662220756',
                '1662173291'
            ), parameters: None
[2022-09-03T11:33:27.729+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "temp"
LINE 3:                 temp,
                        ^

[2022-09-03T11:33:27.735+0000] {taskinstance.py:1412} INFO - Marking task as FAILED. dag_id=weather_data, task_id=insert_weather_krd, execution_date=20220903T113321, start_date=20220903T113327, end_date=20220903T113327
[2022-09-03T11:33:27.742+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 196 for task insert_weather_krd (syntax error at or near "temp"
LINE 3:                 temp,
                        ^
; 10416)
[2022-09-03T11:33:27.769+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-09-03T11:33:27.820+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
